@@ -21,42 +21,53 @@ import no.rutebanken.nabu.domain.event.CrudEventSearch;
 import no.rutebanken.nabu.domain.event.JobEvent;
 import no.rutebanken.nabu.domain.event.JobState;
 import no.rutebanken.nabu.domain.event.TimeTableAction;
-
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
+import jakarta.validation.ConstraintViolationException;
 import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class EventRepositoryImplTest extends BaseIntegrationTest {
+class EventRepositoryImplTest extends BaseIntegrationTest {
 
     @Autowired
     EventRepositoryImpl repository;
 
-    private Instant now = Instant.now();
+    private final Instant now = Instant.now();
 
     @Test
-    public void testUpdate() throws Exception {
+    void testUpdate() {
         JobEvent input = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "00013-gtfs.zip", 2L, "1", TimeTableAction.IMPORT.toString(), JobState.OK, "1234567", now, "ost");
-        repository.save(input);
+        Assertions.assertDoesNotThrow(() -> {
+            repository.save(input);
+            repository.flush();
+        });
     }
 
     @Test
-    public void testFindJobEventsForProvider() throws Exception {
+    void testSaveInvalidEvent() {
+        JobEvent input = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "X".repeat(500), 2L, "1", TimeTableAction.IMPORT.toString(), JobState.OK, "1234567", now, "ost");
+        repository.save(input);
+        Assertions.assertThrows(ConstraintViolationException.class, () -> repository.flush());
+    }
+
+    @Test
+    void testFindJobEventsForProvider() {
         JobEvent s1 = JobEvent.builder().domain(JobEvent.JobDomain.TIMETABLE).providerId(2L).referential("ost").state(JobState.OK).name("file1.zip").externalId("1").action(TimeTableAction.IMPORT).correlationId("corr-id-1").eventTime(now).build();
         repository.save(s1);
         JobEvent s2 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 2L, "2", TimeTableAction.EXPORT.toString(), JobState.FAILED, "corr-id-1", now.plus(1, ChronoUnit.MINUTES), "ost");
         repository.save(s2);
         JobEvent s3 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file2.zip", 3L, "1", TimeTableAction.IMPORT.toString(), JobState.TIMEOUT, "corr-id-2", now, "ost");
         repository.save(s3);
-        Collection<JobEvent> eventsForProvider2 = repository.findTimetableJobEvents(Arrays.asList(2L), null, null, null, null, null, null);
+        Collection<JobEvent> eventsForProvider2 = repository.findTimetableJobEvents(List.of(2L), null, null, null, null, null, null);
         assertThat(eventsForProvider2).hasSize(2);
 
         Collection<JobEvent> allEvents = repository.findTimetableJobEvents(null, null, null, null, null, null, null);
@@ -64,8 +75,8 @@ public class EventRepositoryImplTest extends BaseIntegrationTest {
     }
 
 
-    @Test
-    public void testGetStatusWithAllCriteria() throws Exception {
+    @Test()
+    void testGetStatusWithAllCriteria() {
         JobEvent s1 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 3L, "1", TimeTableAction.IMPORT.toString(), JobState.OK, "corr-id-1", now, "ost");
         repository.save(s1);
         JobEvent s2 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 3L, "2", TimeTableAction.EXPORT.toString(), JobState.FAILED, "corr-id-1", now.plus(1, ChronoUnit.MINUTES), "ost");
@@ -73,18 +84,18 @@ public class EventRepositoryImplTest extends BaseIntegrationTest {
         JobEvent s3 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file2.zip", 3L, "1", TimeTableAction.IMPORT.toString(), JobState.TIMEOUT, "corr-id-2", now, "ost");
         repository.save(s3);
 
-        Collection<JobEvent> statusesQueryMatchingS1 = repository.findTimetableJobEvents(Arrays.asList(3L), now, now, Arrays.asList(TimeTableAction.IMPORT.toString()), Arrays.asList(JobState.OK), Arrays.asList("1"), Arrays.asList("file1.zip"));
-        assertThat(statusesQueryMatchingS1).hasSize(2);
-        assertThat(statusesQueryMatchingS1).contains(s1, s2);
+        Collection<JobEvent> statusesQueryMatchingS1 = repository.findTimetableJobEvents(List.of(3L), now, now, List.of(TimeTableAction.IMPORT.toString()), List.of(JobState.OK), List.of("1"), List.of("file1.zip"));
+        assertThat(statusesQueryMatchingS1)
+                .hasSize(2)
+                .contains(s1, s2);
 
-
-        Collection<JobEvent> statusesQueryMatchingS1andS3 = repository.findTimetableJobEvents(Arrays.asList(3L), now, now, Arrays.asList(TimeTableAction.IMPORT.toString(), TimeTableAction.EXPORT.toString()),
+        Collection<JobEvent> statusesQueryMatchingS1andS3 = repository.findTimetableJobEvents(List.of(3L), now, now, Arrays.asList(TimeTableAction.IMPORT.toString(), TimeTableAction.EXPORT.toString()),
                 Arrays.asList(JobState.OK, JobState.TIMEOUT), null, Arrays.asList("file1.zip", "file2.zip"));
         assertThat(statusesQueryMatchingS1andS3).hasSize(3);
     }
 
     @Test
-    public void getLatestDeliveryStatusForProvider() {
+    void getLatestDeliveryStatusForProvider() {
         JobEvent s1 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 3L, "1", TimeTableAction.FILE_TRANSFER.toString(), JobState.OK, "corr-id-1", now, "ost");
         repository.save(s1);
         JobEvent s2 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 3L, "2", TimeTableAction.EXPORT.toString(), JobState.FAILED, "corr-id-1", now.plus(1, ChronoUnit.MINUTES), "ost");
@@ -95,14 +106,14 @@ public class EventRepositoryImplTest extends BaseIntegrationTest {
         repository.save(sReimport);
 
 
-        List<JobEvent> statusList = repository.getLatestTimetableFileTransfer(3l);
-       assertEquals(2, statusList.size());
-       assertTrue(statusList.containsAll(Arrays.asList(s1, s2)));
+        List<JobEvent> statusList = repository.getLatestTimetableFileTransfer(3L);
+        Assertions.assertEquals(2, statusList.size());
+        Assertions.assertTrue(statusList.containsAll(Arrays.asList(s1, s2)));
     }
 
 
     @Test
-    public void testClearAll() {
+    void testClearAll() {
         JobEvent s1 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 3L, "1", TimeTableAction.IMPORT.toString(), JobState.OK, "corr-id-1", now, "ost");
         repository.save(s1);
         JobEvent s2 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 4L, "2", TimeTableAction.EXPORT.toString(), JobState.FAILED, "corr-id-1", now.plus(1, ChronoUnit.MINUTES), "ost");
@@ -110,14 +121,14 @@ public class EventRepositoryImplTest extends BaseIntegrationTest {
         JobEvent s3 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file2.zip", 3L, "1", TimeTableAction.IMPORT.toString(), JobState.TIMEOUT, "corr-id-2", now, "ost");
         repository.save(s3);
 
-        repository.clearAll(JobEvent.JobDomain.TIMETABLE.toString());
+        repository.clearJobEvents(JobEvent.JobDomain.TIMETABLE.toString());
 
-       assertTrue(repository.findTimetableJobEvents(Arrays.asList(3L), null, null, null, null, null, null).isEmpty());
-       assertTrue(repository.findTimetableJobEvents(Arrays.asList(4L), null, null, null, null, null, null).isEmpty());
+        Assertions.assertTrue(repository.findTimetableJobEvents(List.of(3L), null, null, null, null, null, null).isEmpty());
+        Assertions.assertTrue(repository.findTimetableJobEvents(List.of(4L), null, null, null, null, null, null).isEmpty());
     }
 
     @Test
-    public void testClearForProvider() {
+    void testClearForProvider() {
         JobEvent s1 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 3L, "1", TimeTableAction.IMPORT.toString(), JobState.OK, "corr-id-1", now, "ost");
         repository.save(s1);
         JobEvent s2 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file1.zip", 4L, "2", TimeTableAction.EXPORT.toString(), JobState.FAILED, "corr-id-1", now.plus(1, ChronoUnit.MINUTES), "ost");
@@ -125,22 +136,38 @@ public class EventRepositoryImplTest extends BaseIntegrationTest {
         JobEvent s3 = new JobEvent(JobEvent.JobDomain.TIMETABLE.toString(), "file2.zip", 3L, "1", TimeTableAction.IMPORT.toString(), JobState.TIMEOUT, "corr-id-2", now, "ost");
         repository.save(s3);
 
-        repository.clear(JobEvent.JobDomain.TIMETABLE.toString(), 3L);
+        repository.clearJobEvents(JobEvent.JobDomain.TIMETABLE.toString(), 3L);
 
-       assertTrue(repository.findTimetableJobEvents(Arrays.asList(3L), null, null, null, null, null, null).isEmpty());
-       assertEquals(1, repository.findTimetableJobEvents(Arrays.asList(4L), null, null, null, null, null, null).size());
+        Assertions.assertTrue(repository.findTimetableJobEvents(List.of(3L), null, null, null, null, null, null).isEmpty());
+        Assertions.assertEquals(1, repository.findTimetableJobEvents(List.of(4L), null, null, null, null, null, null).size());
     }
 
     @Test
-    public void findCrudEventsAllParamsSet() {
+    void findCrudEventsAllParamsSet() {
 
-        CrudEvent crudEvent = CrudEvent.builder().entityClassifier("class").changeType("changeType").entityType("entityType").version(1l).comment("comm").action("CREATE").externalId("213").eventTime(Instant.now()).build();
+        final Instant refTime = LocalDateTime.of(2019, 2, 19, 16, 19, 0)
+                .atOffset(ZoneOffset.UTC)
+                .toInstant();
+
+        CrudEvent crudEvent = CrudEvent.builder()
+                .entityClassifier("class")
+                .changeType("changeType")
+                .entityType("entityType")
+                .version(1L).comment("comm")
+                .action("CREATE").externalId("213").eventTime(refTime).build();
 
         CrudEvent savedCrudEvent = repository.save(crudEvent);
-        CrudEventSearch search = new CrudEventSearch(crudEvent.getUsername(), crudEvent.getEntityType(), crudEvent.getEntityClassifier(), crudEvent.getAction(), crudEvent.getExternalId(), crudEvent.getEventTime().minusSeconds(20), Instant.now());
+        CrudEventSearch search =
+                new CrudEventSearch(crudEvent.getUsername(),
+                        crudEvent.getEntityType(),
+                        crudEvent.getEntityClassifier(),
+                        crudEvent.getAction(),
+                        crudEvent.getExternalId(),
+                        crudEvent.getEventTime().minusSeconds(20),
+                        refTime);
 
         List<CrudEvent> crudEvents = repository.findCrudEvents(search);
-       assertEquals(1, crudEvents.size());
-       assertEquals(savedCrudEvent.getPk(), crudEvents.get(0).getPk());
+        Assertions.assertEquals(1, crudEvents.size());
+        Assertions.assertEquals(savedCrudEvent.getPk(), crudEvents.get(0).getPk());
     }
 }
